README, Load More, Markdown, and little message with the number of posts and pages on screen

--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.1.0",
-    "svelte": "^3.52.0",
+    "svelte": "^3.54.0",
     "vite": "^3.2.3"
+  },
+  "dependencies": {
+    "dompurify": "^2.4.1",
+    "snarkdown": "^2.0.0"
   }
 }
